Creation du bouton jouer a jouer, linkage avec l'activite APartie, ajout de APartie (oublie du precedent commit).

--- a/app/src/main/res/values-en/strings_Acceuil.xml
+++ b/app/src/main/res/values-en/strings_Acceuil.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="bouton_parametres">Parameters</string>
+    <string name="bouton_jouer">Play</string>
 
 </resources>
