--- a/app/src/main/res/layout/vxml_acceuil.xml
+++ b/app/src/main/res/layout/vxml_acceuil.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ca.cours5b5.fredericengland.vues.VAcceuil xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/VAcceuil"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,10 +13,26 @@
         android:layout_marginBottom="232dp"
         android:layout_marginEnd="148dp"
         android:layout_marginStart="148dp"
-        android:layout_marginTop="231dp"
         android:text="@string/bouton_parametres"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_jouer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginRight="148dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="167dp"
+        android:text="@string/bouton_jouer"
+        app:layout_constraintBottom_toTopOf="@+id/btn_parametres"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="167dp" />
 </ca.cours5b5.fredericengland.vues.VAcceuil>
