--- a/app/src/main/res/values/strings_Acceuil.xml
+++ b/app/src/main/res/values/strings_Acceuil.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="bouton_parametres">Parametres</string>
+    <string name="bouton_jouer">Jouer</string>
 
 </resources>
