--- a/app/src/main/res/layout/vxml_partie.xml
+++ b/app/src/main/res/layout/vxml_partie.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <ca.cours5b5.fredericengland.vues.VGrille
-        android:id="@+id/gridLayout2"
+        android:id="@+id/gridlayout_Partie"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
-        android:text="TextView"
+        android:text="@string/txt_nomJoueur1"
         app:layout_constraintBottom_toTopOf="@+id/txt_NomJoueur2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/gridLayout2"
@@ -43,7 +43,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="100dp"
-        android:text="TextView"
+        android:text="@string/txt_nomJoueur2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/gridLayout2"
