--- a/app/src/main/res/layout-land/activity_partie.xml
+++ b/app/src/main/res/layout-land/activity_partie.xml
@@ -2,6 +2,7 @@
 <ca.cours5b5.FredericEngland.vues.VPartie xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_partie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ca.cours5b5.FredericEngland.activites.APartie">
