--- a/app/src/main/res/layout-land/activity_partie_reseau.xml
+++ b/app/src/main/res/layout-land/activity_partie_reseau.xml
@@ -2,39 +2,44 @@
 <ca.cours5b5.FredericEngland.vues.VPartieReseau xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_partie"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ca.cours5b5.FredericEngland.activites.APartieReseau">
 
     <TextView
         android:id="@+id/texte_joueur_un"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/joueur1"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/grille"
+        android:gravity="center"
+        android:background="@color/ROUGE_FOND"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toBottomOf="@id/grille"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/grille"
-        app:layout_constraintTop_toBottomOf="@+id/texte_joueur_deux" />
+        app:layout_constraintStart_toEndOf="@id/grille"
+        app:layout_constraintTop_toTopOf="@id/grille" />
 
     <TextView
         android:id="@+id/texte_joueur_deux"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/joueur2"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/texte_joueur_un"
+        android:gravity="center"
+        android:background="@color/JAUNE_FOND"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        app:layout_constraintBottom_toBottomOf="@id/grille"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/grille"
-        app:layout_constraintTop_toTopOf="@+id/grille" />
+        app:layout_constraintStart_toEndOf="@id/grille"
+        app:layout_constraintTop_toTopOf="@id/grille" />
 
     <ca.cours5b5.FredericEngland.vues.VGrille
         android:id="@+id/grille"
