--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -4,21 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.cours5b5.FredericEngland.activites.AMenuPrincipal">
+    tools:context="ca.cours5b5.FredericEngland.activites.AMenuPrincipal"
+    tools:layout_editor_absoluteY="81dp">
 
     <Button
         android:id="@+id/bouton_parametres"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/parametres"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bouton_partie" />
+        app:layout_constraintEnd_toEndOf="@+id/bouton_partie_reseau"
+        app:layout_constraintStart_toStartOf="@+id/bouton_partie_reseau"
+        app:layout_constraintTop_toBottomOf="@+id/bouton_partie_reseau"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/bouton_partie"
@@ -29,62 +31,40 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/jouer"
-        app:layout_constraintBottom_toTopOf="@+id/bouton_parametres"
-        app:layout_constraintEnd_toEndOf="@+id/bouton_parametres"
-        app:layout_constraintStart_toStartOf="@+id/bouton_parametres"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/bouton_connexion"
+        app:layout_constraintStart_toStartOf="@+id/bouton_connexion"
+        app:layout_constraintTop_toBottomOf="@+id/bouton_connexion"
+        app:layout_constraintVertical_bias="0.17000002"
+        app:layout_constraintVertical_chainStyle="spread_inside" />
 
     <Button
-        android:id="@+id/btn_connection"
-        android:layout_width="112dp"
+        android:id="@+id/bouton_connexion"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:layout_marginEnd="136dp"
-        android:layout_marginLeft="136dp"
-        android:layout_marginRight="136dp"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/btn_connection"
-        app:layout_constraintBottom_toTopOf="@+id/bouton_partie"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/connexion"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btn_deconnection"
+        android:id="@+id/bouton_partie_reseau"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:layout_marginEnd="127dp"
-        android:layout_marginLeft="128dp"
-        android:layout_marginRight="127dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="40dp"
-        android:text="@string/btn_deconnection"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/bouton_partie"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="128dp" />
-
-    <Button
-        android:id="@+id/btn_jouerligne"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="149dp"
-        android:layout_marginLeft="147dp"
-        android:layout_marginRight="149dp"
-        android:layout_marginStart="147dp"
-        android:layout_marginTop="46dp"
-        android:text="@string/btn_jouerligne"
-        app:layout_constraintBottom_toTopOf="@+id/bouton_parametres"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/jouer_enligne"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/bouton_partie"
+        app:layout_constraintStart_toStartOf="@+id/bouton_partie"
         app:layout_constraintTop_toBottomOf="@+id/bouton_partie"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="230dp" />
+        app:layout_constraintVertical_bias="0.0" />
 </ca.cours5b5.FredericEngland.vues.VMenuPrincipal>
